--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 <div class="container text-center">
+
+<!--    <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>-->
+
+<!--    <form th:action="@{/logout}" method="post">-->
+<!--        <input type="submit" value="Logout">-->
+<!--    </form>-->
+
     <div><h1>Autoservice</h1></div>
     <div class="p-2">
         <a class="h2" th:href="@{/models}">List Models</a>
