--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <!--<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" >-->
+<!--xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"-->
 <head>
     <meta charset="UTF-8">
     <title>List Users</title>
@@ -16,7 +17,7 @@
                 <th>ID</th>
                 <th>Name</th>
                 <th>Phone</th>
-                <th></th>
+                <th>Actions</th><!--sec:authorize="hasRole('ADMIN')"-->
             </tr>
             </thead>
             <tbody>
@@ -25,7 +26,7 @@
                     <td>[[${user.id}]]</td>
                     <td>[[${user.name}]]</td>
                     <td>[[${user.phone}]]</td>
-                    <td>
+                    <td> <!--sec:authorize="hasRole('ADMIN')"-->
                         <a th:href="@{'/users/edit/' + ${user.id}}">Edit</a>
 
                         <a th:href="@{'/users/delete/' + ${user.id}}">Delete</a>
