--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,11 +8,11 @@
 <body>
 <div class="container text-center">
 
-<!--    <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>-->
+    <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
 
-<!--    <form th:action="@{/logout}" method="post">-->
-<!--        <input type="submit" value="Logout">-->
-<!--    </form>-->
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Logout">
+    </form>
 
     <div><h1>Autoservice</h1></div>
     <div class="p-2">
