--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -17,7 +17,7 @@
                 <th>ID</th>
                 <th>Name</th>
                 <th>Phone</th>
-                <th>Actions</th><!--sec:authorize="hasRole('ADMIN')"-->
+                <th>Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -26,7 +26,7 @@
                     <td>[[${user.id}]]</td>
                     <td>[[${user.name}]]</td>
                     <td>[[${user.phone}]]</td>
-                    <td> <!--sec:authorize="hasRole('ADMIN')"-->
+                    <td>
                         <a th:href="@{'/users/edit/' + ${user.id}}">Edit</a>
 
                         <a th:href="@{'/users/delete/' + ${user.id}}">Delete</a>
